--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@
 
 \section*{Experience}{}
 \normalsize
-\noindent \href{https://twitter.com.com}{\textbf{\ul{Twitter}}}
+\noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
 $\vert$ \small Software Engineering Intern
 {\hfill \footnotesize \textit{May 2019 - Present}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
@@ -117,8 +117,8 @@ $\vert$ \small Software Engineering Intern
   \small
   \item Worked on the metrics submission pipeline that streams millions of data
     points per second.
-  \item Owned the time-series creation service written in Golang by ensuring its
-    availability.
+  \item Owned the time-series metadata creation service, written in Go, by
+    ensuring its availability.
   \item Migrated the service's IPC layer to gRPC to improve reliability.
     Implemented consistent hashing and request termination, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}.
