--- a/resume.tex
+++ b/resume.tex
@@ -82,14 +82,14 @@
 \normalsize
 \noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
 $\vert$ \small Software Engineering Intern
-{\hfill \footnotesize \textit{May 2019 - Present}}
+{\hfill \footnotesize \textit{May 2019 - Aug 2019}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Designed and implemented a system (in Scala) on top of Hive Metastore
-    that made Presto and Hive at Twitter GDPR-compliant.
-  \item Adding two-phase commit support to Apache Heron (Twitter's stream
-    processing engine), to enable end-to-end exactly-once delivery semantic. (in
-    progress)
+  \item Extended \href{https://apache.github.io/incubator-heron/}{\ul{Apache
+        Heron}}'s exactly-once processing semantics to take side effects into
+    account, by implementing a variant of the two-phase commit algorithm.
+  \item Designed and implemented a system (in Scala) that made Twitter's
+    interactive query infrastructure (Presto and Hive) GDPR-compliant.
 \end{itemize}
 
 \bighalfspace
