add design doc to resume

--- a/resume.tex
+++ b/resume.tex
@@ -85,9 +85,11 @@ $\vert$ \small Software Engineering Intern
 {\hfill \footnotesize \textit{May 2019 - Aug 2019}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Extended \href{https://apache.github.io/incubator-heron/}{\ul{Apache
-        Heron}}'s exactly-once processing semantics to take side effects into
-    account, by implementing a variant of the two-phase commit algorithm.
+  \item Added support for \textit{end-to-end exactly-once processing} semantics
+    in \href{https://apache.github.io/incubator-heron/}{\ul{Apache Heron}} by
+    implementing a variant of the two-phase commit algorithm. Details in
+    \href{https://docs.google.com/document/d/1Shqp2z-uAhsOUN2erbc2d-72wdjA8anp}{\ul{design
+        doc}}.
   \item Designed and implemented a system (in Scala) that made Twitter's
     interactive query infrastructure (Presto and Hive) GDPR-compliant.
 \end{itemize}
