remove infra jargons

--- a/resume.tex
+++ b/resume.tex
@@ -73,8 +73,7 @@
     \par}
 \end{center}
 
-\newsummary{focus}{Distributed systems, Large-scale data processing/storage
-  infrastructure}
+\newsummary{career values}{personal growth, impact, fast pace, risk-taking}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
