Revert "remove infra jargons"
This reverts commit ff64d67d1a97d2fb8d8a256582aa0fc8037298b6.

--- a/resume.tex
+++ b/resume.tex
@@ -73,7 +73,8 @@
     \par}
 \end{center}
 
-\newsummary{career values}{personal growth, impact, fast pace, risk-taking}
+\newsummary{focus}{Distributed systems, Large-scale data processing/storage
+  infrastructure}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
