--- a/resume.tex
+++ b/resume.tex
@@ -73,7 +73,7 @@
     \par}
 \end{center}
 
-\newsummary{career values}{impact, personal growth, fast pace, risk-taking}
+\newsummary{values}{impact, personal growth, fast-paced, risk-taking}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
