--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@
 \section*{Experience}{}
 \normalsize
 \noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
-$\vert$ \small Software Engineering Intern
+$\vert$ \small Software Engineering Intern (Data Platform)
 {\hfill \footnotesize \textit{May 2019 - Aug 2019}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -96,7 +96,7 @@ $\vert$ \small Software Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
-$\vert$ \small DevOps/Infrastructure Engineering Intern
+$\vert$ \small Software Engineering Intern (Cloud Infrastructure)
 {\hfill \footnotesize \textit{Sep 2018 - Dec 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -112,7 +112,7 @@ $\vert$ \small DevOps/Infrastructure Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
-$\vert$ \small Software Engineering Intern
+$\vert$ \small Software Engineering Intern (Metrics Database)
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -128,7 +128,7 @@ $\vert$ \small Software Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://universe.com}{\ul{\textbf{Universe}}}
-$\vert$ \small Software Engineering Intern (product)
+$\vert$ \small Software Engineering Intern (Product)
 {\hfill \footnotesize \textit{May 2017 - Aug 2017}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -141,7 +141,7 @@ $\vert$ \small Software Engineering Intern (product)
 \bighalfspace
 \normalsize
 \noindent \href{https://plot.ly}{\textbf{\ul{Plotly}}}
-$\vert$ \small Software Engineering Intern (product)
+$\vert$ \small Software Engineering Intern (Product)
 {\hfill \footnotesize \textit{May 2016 - Aug 2016}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
