add type of work done to make it easier to see

--- a/resume.tex
+++ b/resume.tex
@@ -73,7 +73,7 @@
     \par}
 \end{center}
 
-\newsummary{focus}{Distributed systems, Large-scale data processing/storage
+\newsummary{interests}{Distributed systems, Large-scale data processing/storage
   infrastructure}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
@@ -81,7 +81,7 @@
 \section*{Experience}{}
 \normalsize
 \noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
-$\vert$ \small Software Engineering Intern
+$\vert$ \small Software Engineering Intern (Data Platform)
 {\hfill \footnotesize \textit{May 2019 - Aug 2019}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -97,7 +97,7 @@ $\vert$ \small Software Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
-$\vert$ \small DevOps/Infrastructure Engineering Intern
+$\vert$ \small Software Engineering Intern (Cloud Infrastructure)
 {\hfill \footnotesize \textit{Sep 2018 - Dec 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -113,7 +113,7 @@ $\vert$ \small DevOps/Infrastructure Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
-$\vert$ \small Software Engineering Intern
+$\vert$ \small Software Engineering Intern (Metrics Database)
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -129,7 +129,7 @@ $\vert$ \small Software Engineering Intern
 \bighalfspace
 \normalsize
 \noindent \href{https://universe.com}{\ul{\textbf{Universe}}}
-$\vert$ \small Software Engineering Intern (product)
+$\vert$ \small Software Engineering Intern (Product)
 {\hfill \footnotesize \textit{May 2017 - Aug 2017}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -142,7 +142,7 @@ $\vert$ \small Software Engineering Intern (product)
 \bighalfspace
 \normalsize
 \noindent \href{https://plot.ly}{\textbf{\ul{Plotly}}}
-$\vert$ \small Software Engineering Intern (product)
+$\vert$ \small Software Engineering Intern (Product)
 {\hfill \footnotesize \textit{May 2016 - Aug 2016}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
