--- a/resume.tex
+++ b/resume.tex
@@ -73,15 +73,15 @@
     \par}
 \end{center}
 
-\newsummary{interests}{Distributed systems, Large-scale data processing/storage
-  infrastructure}
+\newsummary{interests}{Large-scale data processing/storage systems,
+  Machine learning infrastructure}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
 \section*{Experience}{}
 \normalsize
 \noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
-$\vert$ \small Software Engineering Intern (Data Platform)
+$\vert$ \small Software Engineering Intern (Data Infrastructure)
 {\hfill \footnotesize \textit{May 2019 - Aug 2019}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -112,7 +112,7 @@ $\vert$ \small Software Engineering Intern (Cloud Infrastructure)
 
 \bighalfspace
 \normalsize
-\noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
+\noindent \href{https://datadoghq.com}{\textbf{\ul{DataDog}}}
 $\vert$ \small Software Engineering Intern (Metrics Database)
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
