change my interest to product infra hehe

--- a/resume.tex
+++ b/resume.tex
@@ -73,8 +73,7 @@
     \par}
 \end{center}
 
-\newsummary{interests}{Large-scale data processing/storage systems,
-  Machine learning infrastructure}
+\newsummary{Interest}{Building highly technical and customer-driven online applications}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
