--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
 {0pt}{2.5ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=1.5cm, right=1.2cm, bottom=1.5cm, footskip=.5cm}
+\geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -75,7 +75,22 @@
     \par}
 \end{center}
 
-\section*{Experience}{}
+\bighalfspace
+\normalsize
+\noindent \href{https://stripe.com}{\textbf{\ul{Stripe}}}
+$\vert$ \small Software Engineering Intern (Product Platform)
+{\hfill \footnotesize \textit{Jan 2020 - Apr 2020}}
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
+  \item Working on platformizing Stripe's Legal Compliance infrastructure.
+  \item Designing APIs and abstractions to make it easy for product teams to
+    launch new financial products globally while being compliant with local
+    regulations.
+\end{itemize}
+
+\smolboispace
+\smolboispace
+\bighalfspace
 \normalsize
 \noindent \href{https://twitter.com}{\textbf{\ul{Twitter}}}
 $\vert$ \small Software Engineering Intern (Data Infrastructure)
@@ -105,8 +120,6 @@ $\vert$ \small Software Engineering Intern (Cloud Infrastructure)
     developer productivity.
   \item Built Spinnaker pipelines to allow \textit{phased rollout} for
     ingress-related infrastructure changes.
-  \item Contributed to the effort of instrumenting distributed tracing to
-    improve visibility.
 \end{itemize}
 
 \smolboispace
@@ -114,7 +127,7 @@ $\vert$ \small Software Engineering Intern (Cloud Infrastructure)
 \bighalfspace
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{DataDog}}}
-$\vert$ \small Software Engineering Intern (Metrics Database)
+$\vert$ \small Software Engineering Intern (Metrics Ingestion Pipeline)
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
@@ -138,8 +151,6 @@ $\vert$ \small Software Engineering Intern (Product)
   \small
   \item Developed many business-critical, A/B-tested, user-facing features
     using React and Rails.
-  \item Pioneered and shipped Universe's first front-end app that consumes its
-    new GraphQL API.
 \end{itemize}
 
 \smolboispace
@@ -151,11 +162,9 @@ $\vert$ \small Software Engineering Intern (Product)
 {\hfill \footnotesize \textit{May 2016 - Aug 2016}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Maintained and developed features for a
-    \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
-    React and Redux.
-  \item Contributed to the development of an e2e testing framework written in
-    Python Selenium.
+  \item Maintained and developed features for
+    \href{https://plot.ly/online-chart-maker/}{\ul{a feature-rich plot
+        editor}} built with React and Redux.
 \end{itemize}
 
 \section*{Writings}{}
@@ -173,7 +182,7 @@ $\vert$ \small Software Engineering Intern (Product)
 \noindent \textbf{University of Waterloo} Bachelor of Software Engineering \par
 \quarterspace
 \footnotesize
-\noindent \textit{Sep 2016 - May 2021 (expected)} \par
+\noindent \textit{Sep 2016 - Dec 2020 (expected)} \par
 \noindent 90.3\% cumulative GPA, \textit{Dean's Honours List}
 
 \end{document}
