--- a/resume.tex
+++ b/resume.tex
@@ -83,9 +83,9 @@ $\vert$ \small Software Engineering Intern (Product Platform)
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Working on platformizing Stripe's Legal Compliance infrastructure.
-  \item Designing APIs and abstractions to make it easy for product teams to
-    launch new financial products globally while being compliant with local
-    regulations.
+  \item Designing APIs and abstractions to reduce integration friction so
+    product teams can rapidly launch new financial products globally, while being
+    compliant with local regulations.
 \end{itemize}
 
 \smolboispace
