transferring to CS :wink: :sob:

--- a/resume.tex
+++ b/resume.tex
@@ -179,7 +179,7 @@ $\vert$ \small Software Engineering Intern (Product)
 \end{itemize}
 
 \section*{Education}{}
-\noindent \textbf{University of Waterloo} Bachelor of Software Engineering \par
+\noindent \textbf{University of Waterloo} Bachelor of Computer Science\par
 \quarterspace
 \footnotesize
 \noindent \textit{Sep 2016 - Dec 2020 (expected)} \par
