update plotly link

--- a/resume.tex
+++ b/resume.tex
@@ -163,8 +163,8 @@ $\vert$ \small Software Engineering Intern (Product)
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Maintained and developed features for
-    \href{https://plot.ly/online-chart-maker/}{\ul{a feature-rich plot
-        editor}} built with React and Redux.
+    \href{https://plot.ly/chart-studio/}{\ul{Plotly's online plot editor}} built
+    with React and Redux.
 \end{itemize}
 
 \section*{Writings}{}
