--- a/resume.tex
+++ b/resume.tex
@@ -182,7 +182,7 @@ $\vert$ \small Software Engineering Intern (Product)
 \noindent \textbf{University of Waterloo} Bachelor of Computer Science\par
 \quarterspace
 \footnotesize
-\noindent \textit{Sep 2016 - Dec 2020 (expected)} \par
+\noindent \textit{2016 - 2020 (expected)} \par
 \noindent 90.3\% cumulative GPA, \textit{Dean's Honours List}
 
 \end{document}
