done internship at Stripe

--- a/resume.tex
+++ b/resume.tex
@@ -78,14 +78,14 @@
 \bighalfspace
 \normalsize
 \noindent \href{https://stripe.com}{\textbf{\ul{Stripe}}}
-$\vert$ \small Software Engineering Intern (Product Platform)
+$\vert$ \small Software Engineering Intern (Product Infrastructure)
 {\hfill \footnotesize \textit{Jan 2020 - Apr 2020}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Working on platformizing Stripe's Legal Compliance infrastructure.
-  \item Designing APIs and abstractions to reduce integration friction so
-    product teams can rapidly launch new financial products globally, while being
-    compliant with local regulations.
+  \item Worked on the Accounts team. We own the complex data models and business
+    logic that involve merchant accounts created on Stripe.
+  \item Redesigned a part of the API for the accounts onboarding/compliance
+    platform so that the integration experience is significantly better.
 \end{itemize}
 
 \smolboispace
